Adding branding docs

--- a/documentationSections/0_gettingStarted/integrateOnSite.mdx
+++ b/documentationSections/0_gettingStarted/integrateOnSite.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Integrate on-site'
-description: 'Convert shoppers with targeted, gated offers.'
+description: 'Convert shoppers with targeted, gated rewards.'
 ---
 
 import LightweightScript from '/snippets/lightweight-script.mdx';
@@ -106,7 +106,7 @@ Tag managers let you can easily add the gocertify script site-wide without needi
         </script>
       ```
   <Info>
-    **Note**: If you cannot add the script to the `<head>` of your site you place it in the `<body>` .
+    **Note**: If you cannot add the script to the `<head>` of your site you can place it in the `<body>` .
   </Info>
 </Accordion>
 
