--- a/documentationSections/0_gettingStarted/introduction.mdx
+++ b/documentationSections/0_gettingStarted/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Quickstart
-description: 'Convert shoppers with targeted, gated offers.'
+description: 'Convert shoppers with targeted, gated rewards.'
 ---
 
 import LightweightScript from '/snippets/lightweight-script.mdx';
