--- a/documentationSections/0_gettingStarted/landingPages.mdx
+++ b/documentationSections/0_gettingStarted/landingPages.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Add Landing Pages'
-description: 'Convert shoppers with targeted, gated offers.'
+description: 'Convert shoppers with targeted, gated rewards.'
 ---
 
 import OfferHubIntegrationSteps from '/snippets/offerHub-integration-steps.mdx';
