--- a/documentationSections/1_buildRewardFlows/overview.mdx
+++ b/documentationSections/1_buildRewardFlows/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: Overview
-description: 'Convert shoppers with targeted, gated offers.'
+description: 'Convert shoppers with targeted, gated rewards.'
 ---
 
 <img
@@ -15,13 +15,14 @@ description: 'Convert shoppers with targeted, gated offers.'
 />
 
 ## What is a Reward Flow?
-Think of a reward flow as the journey that your shoppers take to unlock a reward. It's a series of steps that guide them 
-through the process of claiming a reward, from the moment they first see your offer to the moment they redeem it. By deploying
+Think of a reward flow as the journey that your shoppers go on, from the moment they first see your reward to the moment they redeem it. By deploying
 these reward flows you can boost conversion and retention while giving back to key communities. 
 
-With gocertify you can create custom reward flows that are tailored to your brand and your audience, for example gating offers to specific target
-audiences (Key workers or Students), offering unique rewards (10% off or Free delivery) and defining the exact data you are collecting during the flow (i.e. Email or D.O.B).
+With gocertify you can create as many of these custom reward flows as you want and tailor them to your brand and your audience. For example, many brands choose to gate offers to specific [target
+audiences](/documentationSections/1_buildRewardFlows/closedUserGroups.mdx) (Key workers or Students), build campaigns around [unique rewards](/documentationSections/1_buildRewardFlows/chooseReward.mdx) (10% off or Free delivery) or leverage our [Data Capture](/documentationSections/2_captureData/overview.mdx) features to exchange rewards for valuable first party data (i.e. Email or D.O.B).
 
-In this section we are going to focus on the core components of a reward flow and how you can use them to create a successful campaign. For more 
-information on how to promote your reward flow, check out our [Promote Offers](/documentationSections/3_promoteOffers/overview) section, and to learn more about 
-data capture, check out our [Data Capture](/documentationSections/2_captureData/overview.mdx) section.
+In this section we are going to focus on the core components of a reward flow and how you can use them to create a successful campaign. 
+
+### Anatomy of a Reward Flow
+
+Show each step 
