--- a/documentationSections/0_gettingStarted/integrateOnSite.mdx
+++ b/documentationSections/0_gettingStarted/integrateOnSite.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Integrate on-site'
 description: 'Convert shoppers with targeted, gated rewards.'
+icon: "wand-magic-sparkles"
 ---
 
 import LightweightScript from '/snippets/lightweight-script.mdx';
