--- a/documentationSections/1_buildRewardFlows/overview.mdx
+++ b/documentationSections/1_buildRewardFlows/overview.mdx
@@ -3,26 +3,8 @@ title: Overview
 description: 'Convert shoppers with targeted, gated rewards.'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/rewardFlow.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/rewardFlow.png"
-  alt="Hero Dark"
-/>
+Campaigns are the fundamental building blocks of reward flows. When you create a campaign you can:
 
-## What is a Reward Flow?
-Think of a reward flow as the journey that your shoppers go on, from the moment they first see your reward to the moment they redeem it. By deploying
-these reward flows you can boost conversion and retention while giving back to key communities. 
-
-With gocertify you can create as many of these custom reward flows as you want and tailor them to your brand and your audience. For example, many brands choose to gate offers to specific [target
-audiences](/documentationSections/1_buildRewardFlows/closedUserGroups.mdx) (Key workers or Students), build campaigns around [unique rewards](/documentationSections/1_buildRewardFlows/chooseReward.mdx) (10% off or Free delivery) or leverage our [Data Capture](/documentationSections/2_captureData/overview.mdx) features to exchange rewards for valuable first party data (i.e. Email or D.O.B).
-
-In this section we are going to focus on the core components of a reward flow and how you can use them to create a successful campaign. 
-
-### Anatomy of a Reward Flow
-
-Show each step 
+* [Choose the reward](/docs/1_buildRewardFlows/chooseReward) you want to offer
+* [Gate the offer](/docs/1_buildRewardFlows/closedUserGroups) to a specific audience 
+* [Enable datacapture](/docs/2_captureData/overview) to collect information from shoppers 
