--- a/documentationSections/0_gettingStarted/quickStart.mdx
+++ b/documentationSections/0_gettingStarted/quickStart.mdx
@@ -1,6 +1,7 @@
 ---
 title: Quickstart
 description: 'Convert shoppers with targeted, gated rewards.'
+icon: "stopwatch"
 ---
 
 import LightweightScript from '/snippets/lightweight-script.mdx';
