--- a/documentationSections/0_gettingStarted/landingPages.mdx
+++ b/documentationSections/0_gettingStarted/landingPages.mdx
@@ -12,15 +12,20 @@ Landing pages are a powerful tool for converting key communities and boosting yo
 
 
   * **Create a landing page** for each of your high value campaigns (i.e. 20% off for Students) 
-  * **Integrate OfferHub** to showcase all your discounts in one place. 
+  * **Create multi-offers page** to showcase all your discounts in one place. 
 
-## Create Campaign landing pages
+## 🔈 Create Campaign landing pages
 <Tip>
-  Best practice is to create dedicated landing pages for your high-priority communities, like keyworkers and students.
+  Best practice is to create dedicated landing pages for your high-priority communities, like Key Workers and Students.
+
+  To increase SEO traffic ensure that the group name and “discount” is mentioned.
+
+  - **Meta title and H1:** _company_ student discount
+  - **Meta description:** We know that a little help goes a long way when you're a student. Verify your student status and you can get 10% off.
+
 </Tip>
 
-<Expandable title="an example of a high performing campaign page">
-<Frame caption="LK Bennetts campaign pages have driven over 300% revenue growth YoY.">
+<Frame caption="LK Bennetts campaign pages drive evergreen revenue growth YoY.">
   <img
     className="block dark:hidden"
     src="/images/LKBennett-iFrame.png"
@@ -32,7 +37,6 @@ Landing pages are a powerful tool for converting key communities and boosting yo
     alt="Hero Dark"
   />
 </Frame>
-</Expandable>
 
 Adding a campaign specific landing page is simple, we recommend getting started with the following steps:
 
@@ -42,11 +46,17 @@ Adding a campaign specific landing page is simple, we recommend getting started 
  
 
 
-## Integrate OfferHub
+## 💝 Create multi-offers page
 
 OfferHub is a centralised location for all your discounts and offers. It's a great way to showcase all your discounts in one place and drive traffic to your site.
 
-<Expandable title="an example of OfferHub">
+<Tip>
+  Best practice is to create a dedicated multi-offers page to showcase all your discounts in one place. To increase SEO traffic ensure the terms “discount codes”, “offers” and “coupon” (if wanting to rank in the the USA) are mentioned:
+
+  - **Meta title and H1:** Official {company} Discount Codes and Offers
+  - **Meta description:** Did you just search for a _company_ discount code? That's an intelligent move - you're obviously a savvy shopper. This is the official discount code page for _company_ and you won't find a better discount elsewhere.
+</Tip>
+
   <Frame caption="OfferHub is a powerful showcase of all your offers and discounts in one place. ">
     <img
       className="block dark:hidden"
@@ -59,7 +69,6 @@ OfferHub is a centralised location for all your discounts and offers. It's a gre
       alt="Hero Dark"
     />
   </Frame>
-</Expandable>
 
 To add OfferHub to your site, follow these steps:
 
