--- a/documentationSections/0_gettingStarted/quickStart.mdx
+++ b/documentationSections/0_gettingStarted/quickStart.mdx
@@ -18,7 +18,7 @@ import LightweightScript from '/snippets/lightweight-script.mdx';
   alt="Hero Dark"
 />
 
-## Integration steps
+## 🏗️ Integration steps
 
 Integrate gocertify by adding our <Tooltip tip="Our script is just 12kb and optimised for performance">lightweight script</Tooltip> to the `<head>` of your site ([no developer needed](integrateOnSite)). This enables you to launch your offers within minutes and have full control over the shopper experience through our self-serve platform (supported by your helpful gocertify account manager).
 
