--- a/documentationSections/1_buildRewardFlows/closedUserGroups.mdx
+++ b/documentationSections/1_buildRewardFlows/closedUserGroups.mdx
@@ -1,33 +1,279 @@
 ---
 title: 'Verify User Groups'
-description: 'Target communities'
+description: 'Convert shoppers with targeted, gated rewards.'
 icon: 'person'
 ---
 
+gocertify enables you to target your campaigns to any combination of our 40+ supported closed groups. We handle the verification process for you end-to-end. 
 
-
-{/* <CardGroup cols={2}>
-  <Card horizontal title="Key Workers" icon="square-1">
-  </Card>
-  <Card horizontal title="Students" icon="square-2">
-  </Card>
-  <Card horizontal title="Disabled" icon="square-3">
-  </Card>
-  <Card horizontal title="Youth" icon="square-4">
-  </Card>
-</CardGroup> */}
+## ⚡ How it works
+gocertify's AI powered verification process verifies shoppers quickly, accurately and securely by automatically analysing "verification proof" in the form of:
 
 <AccordionGroup>
-  <Accordion title="Key Workers">
-    You can put other components inside Accordions.
+  <Accordion title="Email Ownership" icon="envelope">
+    Many closed groups can be identified by their email address domain. For example, many healthcare workers have an email ending in `nhs.uk`. 
+    
+    If a shopper verifies using email, gocertify validates that the domain matches the group criteria and sends the shopper a verification code to prove ownership of that email address.
+  </Accordion>
+  <Accordion title="Document Upload" icon="passport">
+  Shoppers can verify their identity by uploading a document, for example a work ID, passport, driving licence or payslip, that can then be analysed 
+  using gocertify's AI technology. 
+  
+  gocertify does not share the document with the brand or store 
+  the shopper is shopping with, but does let the brand know which category of discount the shopper verified for (e.g. student or NHS). If the shopper 
+  is verifying special category data (i.e. that they are pregnant, or that they have donated blood) gocertify will ask the shopper for their explicit consent to process the document 
+  and send a code.
+  </Accordion>
+  <Accordion title="JustGiving" icon="circle-dollar-to-slot">
+  If a shopper chooses to donate to JustGiving, gocertify will direct the shopper to the JustGiving site. JustGiving will confirm with gocertify that the 
+  shopper has made a charitable donation, and gocertify will issue the reward.
+  </Accordion>
+  <Accordion title="VerifID" icon="building-columns">
+  If a shopper verifies using the 'VerifID' learning portal, 'VerifID' will notify gocertify that the status is confirmed, and gocertify will send the shopper a code.
+  </Accordion>
+  <Accordion title="Manual Verification" icon="headset">
+  If a shopper experiences any difficulty verifying, the <Tooltip tip="Available 24 hours 7 days a week"> gocertify customer service team </Tooltip> will manually verify. For this, gocertify collects the shopper's email, 
+  mobile number, and a copy of the document they are using to verify their status. gocertify does not share the document with the brand or store the shopper is 
+  shopping with, but does let the brand know which category of discount the shopper verified for (e.g. student or NHS).
+  </Accordion>
+</AccordionGroup>
 
+
+
+## 👥 Supported Groups
+
+gocertify supports 40+ closed user groups out of the box and can support additional groups on request.
+
+<AccordionGroup>
+
+  <Accordion title="Disability" icon="wheelchair">
+    **Definition:** The UK gov disability census defines disability as a self-reported individual who had physical/mental health conditions lasting over 
+    12 months impacting day-to-day activities. This aligns with the definition of disability in the Equalities act of 2010.
+
+    **Verification methods:**
+     Disabled Railcard & Bus pass; Blue Badge; Attendance Allowance Letter;Disability Living Allowance (DLA) Letter; Personal Independence Payment (PIP) Award Letter
+
+  </Accordion>
+
+  <Accordion title="Military" icon="shield-halved">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Students" icon="graduation-cap">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="NHS" icon="heart">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Teacher" icon="chalkboard-user">
+    **Definition:**
+    
+    **Verification methods:**
   </Accordion>
 
   <Accordion title="Youth" icon="alien-8bit">
-    Check out the [Accordion](/content/components/accordions) docs for all the supported props.
+    **Definition:**
+    
+    **Verification methods:**
   </Accordion>
 
-  <Accordion title="Disability">
-    Check out the [Accordion](/content/components/accordions) docs for all the supported props.
+  <Accordion title="Police & Fire Service" icon="fire-extinguisher">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="First Responder" icon="truck-medical">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Social" icon="hands-holding-child">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Apprentice" icon="hammer">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Strava" icon="person-running">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Donate" icon="circle-dollar-to-slot">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Delivery & Transport Staff" icon="truck">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Supermarket Staff" icon="cart-shopping">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Charity Worker" icon="hand-holding-heart">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Australian Defence Force" icon="shield-halved">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Home Mover" icon="house-building">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Diabetes" icon="kit-medical">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Graduates" icon="graduation-cap">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Festival Worker" icon="cloud-sun">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Social Worker" icon="hands-holding-child">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Essential Worker" icon="user-nurse">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Postal & Transport Staff" icon="truck">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Dealmaker" icon="handshake">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Maternity Leave" icon="baby-carriage">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Nike Run Club" icon="person-running">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Employee Discount" icon="briefcase">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Code Generator" icon="code">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Receipt Discount" icon="receipt">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Over 25" icon="id-card">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Student & Youth" icon="alien-8bit">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Shop Runner" icon="shop">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Age Discount" icon="image-portrait">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Emergency Service Workers" icon="user-nurse">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Deliveroo Riders" icon="motorcycle">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Debenhams Beauty Club" icon="face-grin-hearts">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="QuickBooks Exclusive" icon="chart-line">
+    **Definition:**
+    
+    **Verification methods:**
+  </Accordion>
+
+  <Accordion title="Veterinary Staff" icon="dog">
+    **Definition:**
+    
+    **Verification methods:**
   </Accordion>
 </AccordionGroup>
