--- a/documentationSections/1_buildRewardFlows/discounts.mdx
+++ b/documentationSections/1_buildRewardFlows/discounts.mdx
@@ -1,7 +1,31 @@
 ---
 title: 'Discounts'
-description: 'Target communities'
+description: 'Convert shoppers with targeted, gated rewards.'
 icon: 'fa-fw'
 ---
 
-Explain how you can do either coupons or magic link etc
+Discounts are the most common reward type used by brands, and can be used to convert shoppers with monetary (£) or percentage off (%) incentives. If you'd 
+rather provide secure access to a storefront with the discounts pre-applied, you can use our [Gated Content](/documentationSections/1_buildRewardFlows/gatedContent) reward type instead.
+
+<Tip>
+  We recommend adding a prefix e.g. HEALTH-20 for Healthcare Workers - so you can run personalisation for each group using your CRM / CDP
+</Tip>
+
+## 🙋 Unique coupons
+Unique, or single-use couponds let you give every shopper a different coupon code. We require a CSV of these coupon codes or can integrate directly with your
+preferred promotion service.
+
+<AccordionGroup>
+<Accordion title="Uploading CSV" icon="file-csv">
+    Provide us with a single column CSV of coupon codes.
+</Accordion>
+<Accordion title="Integrating with Uniqodo" icon="ticket-simple">
+    Provide us with your Uniqodo `API key` and `offer ID` (e.g. 9384) and we'll automatically add shoppers to your campaign. You can also upload a CSV of coupon codes as a fallback.
+</Accordion>
+<Accordion title="Integrating with your affiliate network" icon="diagram-project">
+    We can fetch coupon codes directly from your affiliate network offer feed.
+</Accordion>
+</AccordionGroup>
+
+## ∞ Multi-use coupons
+Standard coupons let you give every shopper of the same campaign the same coupon code e.g. SAVE20. Provide us with the coupon code and we'll apply it to your campaign.
