--- a/documentationSections/1_buildRewardFlows/overview.mdx
+++ b/documentationSections/1_buildRewardFlows/overview.mdx
@@ -3,8 +3,27 @@ title: Overview
 description: 'Convert shoppers with targeted, gated rewards.'
 ---
 
-Campaigns are the fundamental building blocks of reward flows. When you create a campaign you can:
+Campaigns form the fundamental building blocks of reward flows. When you create a campaign you can:
 
-* [Choose the reward](/docs/1_buildRewardFlows/chooseReward) you want to offer
-* [Gate the offer](/docs/1_buildRewardFlows/closedUserGroups) to a specific audience 
-* [Enable datacapture](/docs/2_captureData/overview) to collect information from shoppers 
+* [Choose the reward](/documentationSections/1_buildRewardFlows/chooseReward) you want to offer (e.g 20% off to Key Workers)
+* [Customise the copy](/documentationSections/1_buildRewardFlows/customiseCopy) and design of the campaign
+* [Gate the offer](/documentationSections/1_buildRewardFlows/closedUserGroups) to a specific audience (or make it available to all shoppers)
+* [Enable datacapture](/documentationSections/2_captureData/overview) to collect information from shoppers (e.g email address)
+
+
+<Frame caption="Three example campaigns being used by brands like Currys.">
+  <img
+    className="block dark:hidden"
+    src="/images/exampleCampaigns.png"
+    alt="Hero Light"
+  />
+  <img
+    className="hidden dark:block"
+    src="/images/exampleCampaigns.png"
+    alt="Hero Dark"
+  />
+</Frame>
+
+In this section we'll cover how to create and configure campaigns but feel free to skip ahead to the [Data capture](/documentationSections/2_captureData/overview) 
+section to learn more about how to leverage rewards to understand your customers better or the [Promotion](/documentationSections/3_promoteOFfers/overview) section 
+to learn how to omnichannel promote these offers to your customers.
