--- a/snippets/landing-page-integration-steps.mdx
+++ b/snippets/landing-page-integration-steps.mdx
@@ -1,7 +1,7 @@
 <Steps>
   <Step title="Add a new page on-site">
     Create a new page on your site for each campaign type you want to promote. 
-    Most brands reference the campaign type in the page url (i.e `company.com/students`) and add a simple title/description highlighting their offers.
+    Most brands reference the campaign type within the page url (i.e `company.com/student-discounts`) and add a simple title/description highlighting their offers.
   </Step>
   <Step title="Add iFrame to body">
     <Tip>
