--- a/documentationSections/0_gettingStarted/overview.mdx
+++ b/documentationSections/0_gettingStarted/overview.mdx
@@ -13,16 +13,20 @@ description: 'Convert shoppers with targeted, gated rewards.'
   src="/images/rewardFlow.png"
   alt="Hero Dark"
 />
-## Why use gocertify?
+## 🚀 Why use gocertify?
 Every year brands spend $1 trn attracting shoppers on-site - but 97\% of shoppers leave without making a purchase and \<4\% share the data needed for retargeting.
 
-Today over 450 brands, from Puma to Samsung, use gocertify to convert these shoppers using targeted, gated reward flows.
+Today over 450 brands, from Puma to Samsung, use gocertify to convert these shoppers using targeted, gated rewards. By deploying
+these rewards at scale you can boost conversion and retention while giving back to key communities. 
 
-## Introducing Reward Flows
-Reward flows are the journey that your shoppers go on, from the moment they first see your reward to the moment they redeem it. By deploying
-these reward flows you can boost conversion and retention while giving back to key communities. 
+<Frame>
+<img src="/images/brandLogos.png" alt="Brand Logos" />
+</Frame>
 
-With gocertify you can create as many of these custom reward flows as you want and tailor them to your brand and your audience. For example, many brands choose to gate offers to specific [target
-audiences](/documentationSections/1_buildRewardFlows/closedUserGroups.mdx) (Key workers or Students), build campaigns around [unique rewards](/documentationSections/1_buildRewardFlows/chooseReward.mdx) (10% off or Free delivery) or leverage our [Data Capture](/documentationSections/2_captureData/overview.mdx) features to exchange rewards for valuable first party data (i.e. Email or D.O.B).
+## 👣 Introducing Reward Flows
+Think of a gocertify reward flow as the journey that your shoppers go on, from the moment they first learn about a reward on-site to the moment they redeem it.  
 
-Show each step 
+With gocertify you can create as many of these custom reward flows as you want and tailor them to your brand and your audience. For example, creating a campaign around [unique rewards](/documentationSections/1_buildRewardFlows/chooseReward) (10% off or Free delivery), gating offers to specific [target
+audiences](/documentationSections/1_buildRewardFlows/closedUserGroups) (e.g. Key workers or Students), and leveraging our [Data Capture](/documentationSections/2_captureData/overview) features to exchange rewards for valuable first party data (i.e. Email or D.O.B).
+
+show each step
