--- a/documentationSections/1_buildRewardFlows/chooseReward.mdx
+++ b/documentationSections/1_buildRewardFlows/chooseReward.mdx
@@ -1,5 +1,15 @@
 ---
 title: 'Choose your reward'
-description: 'Target communities'
+description: 'Convert shoppers with targeted, gated rewards.'
 icon: 'hand-holding-heart'
 ---
+
+gocertify centralises reward management, simplifying how you tailor and distribute them to your brand and your audience. The key reward types are:
+
+- [Discounts](/documentationSections/1_buildRewardFlows/discounts) - unique or multi-use coupons for monetary (£) and percentage off (%)
+- [Gift Cards](/documentationSections/1_buildRewardFlows/giftCards) - delivered digitally after qualifying purchases
+- [Gated Content](/documentationSections/1_buildRewardFlows/gatedContent) - Exclusive access to a discounted pricing storefront or premium content
+
+<Tip>
+  You can link your preferred reward playform (i.e. Uniqodo or Awin Vouchers) to your gocertify account for an automated reward feed or simply upload a CSV file of your existing offers.
+</Tip>
