updated docs CSS

--- a/documentationSections/1_buildRewardFlows/advancedCSS.mdx
+++ b/documentationSections/1_buildRewardFlows/advancedCSS.mdx
@@ -2,3 +2,7 @@
 title: Advanced CSS
 description: 'Convert shoppers with targeted, gated rewards.'
 ---
+
+
+
+`@media (max-width: 767px){.gc-box{right: 0; top: 0; bottom: unset;}}`
