--- a/documentationSections/1_buildRewardFlows/customiseCopy.mdx
+++ b/documentationSections/1_buildRewardFlows/customiseCopy.mdx
@@ -4,7 +4,7 @@ description: 'Convert shoppers with targeted, gated rewards.'
 icon: 'comments-dollar'
 ---
 
-gocertify supports internationalisation in <Tooltip tip="English, German, Danish, Dutch, Italian, French, Swedish, Japanese, Korean, Spanish, Portuguese, Chinese"> 12 languages </Tooltip>. To set up your campaign we will need the following information:
+gocertify supports internationalisation in <Tooltip tip="English, German, Danish, Dutch, Italian, French, Swedish, Japanese, Korean, Spanish, Portuguese, Chinese"> 12 languages </Tooltip>. To set up your campaign we will a title, description, offer terms, tagline, and FAQs (see below for more details).
 
 <Frame>
 <img
