--- a/documentationSections/1_buildRewardFlows/discounts.mdx
+++ b/documentationSections/1_buildRewardFlows/discounts.mdx
@@ -28,4 +28,4 @@ preferred promotion service.
 </AccordionGroup>
 
 ## ∞ Multi-use coupons
-Standard coupons let you give every shopper of the same campaign the same coupon code e.g. SAVE20. Provide us with the coupon code and we'll apply it to your campaign.
+Standard coupons let you give every shopper of the same campaign the same coupon code e.g. `SAVE20`. Provide us with the coupon code and we'll apply it to your campaign.
