--- a/documentationSections/0_gettingStarted/customiseBranding.mdx
+++ b/documentationSections/0_gettingStarted/customiseBranding.mdx
@@ -86,7 +86,7 @@ You can provide up to 4 font files to customise the heading, normal, tagline and
 </Frame>
 
 #### Custom Styling
-The Advanced CSS option let's you can go even further with your customisation. The most popular customisations are captured below, or refer to the [Advanced CSS](/documentationSections/1_buildRewardFlows/advanceCSS.mdx) section for more details.
+The Advanced CSS option let's you can go even further with your customisation. The most popular customisations are captured below, or refer to the [Advanced CSS](/documentationSections/1_buildRewardFlows/advanceCSS) section for more details.
 
 <AccordionGroup>
   <Accordion title="Hide iFrame Brand Logo" icon="square-minus">
