--- a/documentationSections/1_buildRewardFlows/closedUserGroups.mdx
+++ b/documentationSections/1_buildRewardFlows/closedUserGroups.mdx
@@ -28,8 +28,8 @@ gocertify's AI powered verification process verifies shoppers quickly, accuratel
   If a shopper chooses to donate to JustGiving, gocertify will direct the shopper to the JustGiving site. JustGiving will confirm with gocertify that the 
   shopper has made a charitable donation, and gocertify will issue the reward.
   </Accordion>
-  <Accordion title="VerifID" icon="building-columns">
-  If a shopper verifies using the 'VerifID' learning portal, 'VerifID' will notify gocertify that the status is confirmed, and gocertify will send the shopper a code.
+  <Accordion title="Learning Portal" icon="building-columns">
+  If a shopper verifies using their learning portal, gocertify will be notified that the status is confirmed, and gocertify will send the shopper a code.
   </Accordion>
   <Accordion title="Manual Verification" icon="headset">
   If a shopper experiences any difficulty verifying, the <Tooltip tip="Available 24 hours 7 days a week"> gocertify customer service team </Tooltip> will manually verify. For this, gocertify collects the shopper's email, 
