--- a/documentationSections/1_buildRewardFlows/discounts.mdx
+++ b/documentationSections/1_buildRewardFlows/discounts.mdx
@@ -11,7 +11,7 @@ rather provide secure access to a storefront with the discounts pre-applied, you
   We recommend adding a prefix e.g. HEALTH-20 for Healthcare Workers - so you can run personalisation for each group using your CRM / CDP
 </Tip>
 
-## 🙋 Unique coupons
+## Unique coupons
 Unique, or single-use couponds let you give every shopper a different coupon code. We require a CSV of these coupon codes or can integrate directly with your
 preferred promotion service.
 
