--- a/documentationSections/1_buildRewardFlows/giftCards.mdx
+++ b/documentationSections/1_buildRewardFlows/giftCards.mdx
@@ -1,7 +1,29 @@
 ---
 title: 'Gift Cards'
-description: 'Target communities'
+description: 'Convert shoppers with targeted, gated rewards.'
 icon: 'fa-fw'
 ---
 
-Explain how you can do either coupons or magic link etc
+Gift cards are a powerful way of both converting shoppers and encouraging repeat purchases. Once a shopper has verified their status, and purchased an item,
+gocertify will issue a gift card via SMS automatically once the transaction is approved by your network. 
+
+
+<Accordion title="Uploading CSV of gift cards" icon="file-csv">
+    The easiest way to issue gift cards is to provide the gocertify client success team with a CSV of unique gift card URLs. We will provide each shopper with this URL via SMS when qualifying transactions are approved by your network.
+</Accordion>
+
+<Steps>
+    <Step title="Shopper verifies">
+        Shopper verifies their status using gocertify.
+    </Step>
+    <Step title="Qualifying purchase made">
+        Shopper purchases an item, which is tracked through your affiliate network.
+    </Step>
+    <Step title="Returns cleared">
+        Shopper completes the returns period.
+    </Step>
+    <Step title="Gift Card Issued">
+        gocertify issues a gift card to the shopper's phone number.
+    </Step>
+
+</Steps>
