--- a/documentationSections/2_captureData/overview.mdx
+++ b/documentationSections/2_captureData/overview.mdx
@@ -2,3 +2,23 @@
 title: Overview
 description: 'Start building loyal communities with targeted, gated offers.'
 ---
+
+Datacapture is a core feature of gocertify that allows you to collect valuable data from shoppers in exchange for rewards. With over 80% of shoppers willing to exchange data in return for promotions and 
+this data is a powerful asset for your brand - enabling you to:
+
+- **Retarget** shoppers who have already visited your site
+- **Personalise** the shopping experience for your shoppers
+- **Optimise** your marketing spend
+
+<Frame caption = "Kwik Fit use datacapture to personalise the shopping experience and direct shoppers to their local branch">
+<img
+    className="block dark:hidden"
+    src="/images/kwikFit.png"
+    alt="Example Datacapture for Kwik Fit"
+    />
+    <img
+    className="hidden dark:block"
+    src="/images/kwikFit.png"
+    alt="Example Datacapture for Kwik Fit"
+/>
+</Frame>
